--- a/.gitignore
+++ b/.gitignore
@@ -127,3 +127,20 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+
+# Replit-specific files and folders
+.replit/
+.env
+.db/
+__pycache__/
+
+# Python-specific files
+*.pyc
+*.pyo
+*.pyd
+__pycache__/
+
+# IDE-specific files
+.vscode/
+.idea/
+
