--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ authors = ["Replit user <<>>"]
 [tool.poetry.dependencies]
 python = "^3.10"
 discord-webhook = "^1.1.0"
+simpy = "^4.0.1"
 
 [tool.poetry.dev-dependencies]
 
