Added pytest, pycov and Github templates

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,10 @@ simpy = "^4.0.1"
 pre-commit = "^4.1.0"
 mypy = "^1.14.1"
 
+[tool.poetry.group.dev.dependencies]
+pytest = "^8.3.4"
+pytest-cov = "^6.0.0"
+
 [tool.group.poetry.dev-dependencies]
 black = "^24.3.0"
 flake8 = "^7.0.0"
