--- a/pytest.ini
+++ b/pytest.ini
@@ -1,3 +1,9 @@
 [pytest]
-testpaths = tests/
-addopts = -v --cov=src --cov-report=term-missing
+filterwarnings =
+    ignore::DeprecationWarning
+
+addopts = -v --cov=src --cov-report=term-missing -ra -q
+testpaths = tests
+python_files = test_*.py
+python_classes = Test*
+python_functions = test_*
