--- a/mypy.ini
+++ b/mypy.ini
@@ -1,5 +1,6 @@
 [mypy]
 ignore_missing_imports = true
+check_untyped_defs = true
 follow_imports = silent
 no_strict_optional = true
 exclude = .*tests/.*|.*docs/.*
